--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./fav/favicon-16x16.png">
     <link rel="manifest" href="./fav/site.webmanifest">
+    <!-- Google's MDL -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
     <!-- Link to style sheet -->
     <link rel="stylesheet" href="./css/style.css">
     <title>The Vanilla Bean Creamery</title>
@@ -19,6 +22,7 @@
   <body>
     <!-- Link to JavaScript -->
     <script src="./js/script.js"></script>
+    <!-- Heading -->
     <center><h1>🍦The Vanilla Bean Creamery🍦</h1></center>
 		<table>
 			<tr align = "center">
@@ -29,6 +33,55 @@
           <h3>Since our first day open in 1962, the Vanilla Bean Creamery has been serving delicious, premium soft serve ice cream and putting smiles on faces for over 60 years. With a variety of Canada's favourite toppings, paired our scrumptious vanilla soft serve, the Vanilla Bean Creamery is guaranteed to have something for everyone. So, come on down and visit us in store, or order online using this website. Either way, thanks for visiting!</h3></center>
           <!-- Border -->
           <center><img src="./images/border.png" alt="Border" width="30%"><img src="./images/border.png" alt="Border" width="30%"><img src="./images/border.png" alt="Border" width="30%"></center>
+          <!-- Data table for menu -->
+          <center><table class="mdl-data-table mdl-js-data-table">
+            <thead>
+              <tr>
+                <th class="mdl-data-table__cell--non-numeric">Sizes</th>
+                <th>Prices</th>
+                <th>Toppings and Extras</th>
+                <th>Prices</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric">Small</td>
+                <td>$2.50</td>
+                <td>Hot fudge</td>
+                <td>$0.50</td>
+              </tr>
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric">Medium</td>
+                <td>$3.50</td>
+                <td>Rainbow sprinkles</td>
+                <td>$0.50</td>
+              </tr>
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric">Large</td>
+                <td>$5.00</td>
+                <td>Chocolate sprinkles</td>
+                <td>$0.50</td>
+              </tr>
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric"></td>
+                <td></td>
+                <td>Caramel</td>
+                <td>$0.50</td>
+              </tr
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric"></td>
+                <td></td>
+                <td>Nuts</td>
+                <td>$0.50</td>
+              </tr>
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric"></td>
+                <td></td>
+                <td>Chocolate dip</td>
+                <td>$1.50</td>
+              </tr>
+            </tbody>
+          </table></center>
 					<h3>Customize your soft serve order and see how much it will cost here:</h3>
           <!-- Call JavaScript function -->
 					<form action="javascript: order()">	
@@ -57,19 +110,19 @@
             <h4>Would you like your soft serve to be dipped in chocolate?</h4>
             <input type="radio" id="yes" name="choice" value="Yes">
             <label for="yes">Yes, please!</label><br>
-            <input type="radio" id="no" name="choice" value="No">
+            <input type="radio" id="no" name="choice" checked>
             <label for="no">No, thank you!</label><br><br><br>
             <!-- Button to calculate -->
 						<input type="submit" value="Calculate Cost">
 					</form>
 				</td>
 			</tr>
-		</table>
+    </table>
+    <br>
+    <br>
 		<!-- Create a space where the user information will be displayed -->
     <div id="calculate-cost">
-
     </div>
-    <br>
     <br>
   </body>
 </html>
